finish code scaling inApp

--- a/CodeWalletWidget/Base.lproj/MainInterface.storyboard
+++ b/CodeWalletWidget/Base.lproj/MainInterface.storyboard
@@ -129,7 +129,7 @@
                                                     <action selector="decBarcodeSize:" destination="M4Y-Lb-cyx" eventType="touchUpInside" id="7lN-VV-kX1"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100 %" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ut0-Cw-0sU">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100 %" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ut0-Cw-0sU">
                                                 <rect key="frame" x="35" y="0.0" width="63" height="72"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="22"/>
                                                 <nil key="textColor"/>
